<resources>
    <string name="app_name">social-app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="create_new_post">Create New Post</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_header">Sign In</string>
    <string name="login_sub_header">Please login to your account</string>
    <string name="password_placeholder">Password</string>
    <string name="email_placeholder">Email</string>
    <string name="login_button">Login</string>
    <string name="dont_have_account_sign_up">Don\'t have account?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="full_name_placeholder">Full name</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up_header">Sign up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">Sign up</string>
    <string name="select_image">Select Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_new_email">Enter your new email</string>
    <string name="change_email">Change Email</string>
    <string name="change">Change</string>
    <string name="Cancel">Cancel</string>
    <string name="change_name">Change name</string>
    <string name="enter_your_new_Full_Name">Enter your new Full Name</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_new_password">Enter your new Password</string>
    <string name="new_password">New Password</string>
    <string name="new_full_name">New Full Name</string>
    <string name="authenticate">Authenticate</string>
    <string name="logout">Logout</string>
    <string name="post_title_label">Title:</string>
    <string name="post_title_placeholder">POST-TITLE</string>
    <string name="post_page_title">Post</string>
    <string name="settings_page_title">Settings</string>
    <string name="enable_shaking_switch_details">Enable opening new post\npage on shake</string>
    <string name="enable_shaking_explanation">Enable Shaking</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="attachment_preview">Attachment Preview</string>
    <string name="search">Search</string>
    <string name="toggle_to_only_view_your_posts">Toggle to only view your posts</string>
    <string name="toggle_text_all">Toggle to see all posts</string>
    <string name="toggle_text_only_user">Toggle to only view your posts</string>
    <string name="skip">Skip</string>
    <string name="finishedIntro">Finish</string>
    <string name="desc">Desc</string>
    <string name="need_help">Need help?</string>
    <string name="click_here">Click Here!</string>
    <string name="addpost">Add Post</string>
    <string name="shaking_message">Shaking to a new post!</string>
    <string name="edit_post_title">Edit Post</string>
</resources>