<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:layout_marginHorizontal="30dp"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="20dp">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/change_password"
		android:textColor="@color/black"
		android:textSize="25sp"
		android:textStyle="bold" />

	<EditText
		android:id="@+id/emailET"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:hint="@string/email_placeholder" />

	<EditText
		android:inputType="textPassword"
		android:id="@+id/old_passwordET"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:hint="@string/old_password" />

	<TextView

		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:text="@string/enter_your_new_password" />

	<EditText
		android:id="@+id/new_passwordET"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:inputType="textPassword"
		android:hint="@string/new_password" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cancel_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:backgroundTint="@color/dialog_red"
			android:text="@string/Cancel"
			android:textAllCaps="false" />

		<Space
			android:layout_width="5dp"
			android:layout_height="match_parent" />


		<Button
			android:id="@+id/change_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:backgroundTint="@color/dialog_green"
			android:text="@string/change"
			android:textAllCaps="false" />
	</LinearLayout>

</LinearLayout>