<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment.SettingsFragment">

    <TextView
        android:id="@+id/settingsPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/stroke"
        android:fontFamily="@font/poppins"
        android:text="@string/settings_page_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/settingsPageTitle">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:text="@string/enable_shaking_explanation"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:text="@string/enable_shaking_switch_details"
                android:textSize="15sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/enableShakingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:theme="@style/Theme.Socialapp.Switch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>