<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    tools:context=".fragments.newPostFragment.AddPostFragment">

    <TextView
        android:id="@+id/addPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/stroke"
        android:fontFamily="@font/poppins"
        android:text="Post"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <!-- TODO: Update blank fragment layout -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@id/postTitle"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/stroke"
                android:maxLines="1"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/postTitleLabel"
                app:layout_constraintTop_toBottomOf="@id/addPostTitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postContentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@id/postContent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/postContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/stroke"
                android:gravity="start"
                android:minLines="3"
                android:maxLines="3"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">


            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dialog_red"
                android:text="@string/delete"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/save_button" />


            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dialog_green"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delete_button"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>